--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Eisen's Website">
   <meta name="author" content="YL Haus">
+   <link rel="icon" href="/favicons/favicon.ico" type="image/x-icon">
 
   <title>YoungLordEisen: Home </title>
 
@@ -23,17 +24,30 @@
 
   <!-- Navigation -->
   <div>
-    <header>
-      <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <ul class="nav navbar-nav">
-        <li><a id="len1" class="hoverable" href="/home.html">Home</a></li>
-        <li><a id="len2" class="hoverable" href="/music/music.html">Music</a></li>
-        <li><a id="len3" class="hoverable" href="/socials/socials.html">Socials</a></li>
-      </ul>
-    </div>
-  </nav>
-    </header>
+
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand" href="home.html">PAPO</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="music/music.html">Music <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="socials/socials.html">Socials</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Merch</a>
+      </li>
+    </ul>
+    <span class="navbar-text nav-item">
+      Young lords haus© 2020
+    </span>
+  </div>
+</nav>
   </div>
 
   <!-- Page Content -->
