--- a/music/music.html
+++ b/music/music.html
@@ -97,6 +97,8 @@
         </section>
         <!-- end box-intro -->
     </div>
+    
+    <!-- End of Top Screen -->
 
     <!-- portfolio div -->
     <div class="portfolio-div">
@@ -137,7 +139,7 @@
                 <!-- The Tale Trinity -->
                 <div class="col-md-6 col-sm-12 photography">
                     <a href="" class="portfolio_item">
-                        <img src="/music/media/images/Tales.jpeg" alt="image" class="img-responsive" />
+                        <img src="/music/media/images/Tales.jpeg" alt="image" class="img-fluid" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
