--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
   <div>
 
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="home.html">PAPO</a>
+  <a class="navbar-brand" href="index.html">PAPO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -44,7 +44,7 @@
       </li>
     </ul>
     <span class="navbar-text nav-item">
-      Young lords haus© 2020
+      Young Lords Haus© 2020
     </span>
   </div>
 </nav>
