--- a/socials/socials.html
+++ b/socials/socials.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Eisen's Website">
+  <meta name="author" content="YL Haus">
+   <link rel="icon" href="/favicons/favicon.ico" type="image/x-icon">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Box personal portfolio Template</title>
+    <title>Young Lord Eisen: Socials</title>
     <link rel="icon" href="/favicons/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
