--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </li>
     </ul>
     <span class="navbar-text">
-      Young lords haus© 2020
+      Young Lords Haus© 2020
     </span>
   </div>
 </nav>
