--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link" href="music.younglordeisen.com">Music</a></li>
+          <li><a class="nav-link" href="https://www.music.younglordeisen.com">Music</a></li>
           <li><a class="nav-link scrollto" href="#services">Products</a></li>
           
       
