--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">papo@younglordeisen.com</a></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:papo@younglordeisen.com">papo@younglordeisen.com</a></i>
         <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
@@ -80,7 +80,7 @@
       <h2>The Official Website</h2>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Welcome</a>
-        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Latest Music Video</span></a>
+        <a href="https://www.youtube.com/watch?v=Sr7H6mbZ5ic&ab_channel=YoungLordEisen-Topic" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Latest Music Video</span></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -224,27 +224,32 @@
         <div class="row">
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="Spotify">
+            <a href="https://open.spotify.com/artist/2BNXzx0VimnLrcNcMBeyw7"><img src="assets/img/clients/client-1.png" class="img-fluid" alt="Spotify"></a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="Apple Music">
+            <a href="https://music.apple.com/us/artist/young-lord-eisen/1449417248">
+            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="Apple Music"></a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="Amazon Music">
+          <a href="https://music.amazon.com/artists/B07MT7PGVY/young-lord-eisen">
+            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="Amazon Music"></a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="Tidal">
+            <a href="https://tidal.com/browse/artist/10843218">
+            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="Tidal"></a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-5.png" class="img-fluid" alt=""BandCamp>
+            <a href="https://music.younglordeisen.com/">
+            <img src="assets/img/clients/client-5.png" class="img-fluid" alt=""BandCamp></a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/client-6.png" class="img-fluid" alt="iTunes">
+            <a href="https://soundcloud.com/younglordeisen">
+            <img src="assets/img/clients/client-6.png" class="img-fluid" alt="Soundcloud"></a>
           </div>
 
         </div>
@@ -298,7 +303,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-basket"></i></div>
-              <h4><a href="https://younglordeisen.bandcamp.com/merch">Eisen Merch</a></h4>
+              <h4><a href="https://music.younglordeisen.com/merch">Eisen Merch</a></h4>
               <p>Get the latest vinyl, posters and more from exclusive projects here!!</p>
             </div>
           </div>
@@ -307,7 +312,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-pyramid"></i></div>
               <h4><a href="https://younglordeisen.bandcamp.com/community">Club Papo</a></h4>
-              <p>The New Subscription Service for all Eisen/Papo Stans!!!...</p>
+              <p>The New Subscription Service for all Eisen/Papo Stans!!!...COMING SOON</p>
             </div>
           </div>
 
@@ -356,11 +361,11 @@
             <h4>Connect With Us!</h4>
             <p>Follow Us On Social Media for Updates!</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-youtube"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-twitch"></i></a>
+              <a href="https://twitter.com/younglordeisen?lang=en" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://www.facebook.com/younglordeisen" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="http://instagram.com/younglordeisen" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.youtube.com/channel/UCbZrCR-q-uDokQjNm2fu_LQ" class="google-plus"><i class="bx bxl-youtube"></i></a>
+              <a href="https://www.twitch.tv/younglordeisen" class="linkedin"><i class="bx bxl-twitch"></i></a>
             </div>
           </div>
 
