--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <h2>The Official Website</h2>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Welcome</a>
-        <a href="https://www.youtube.com/watch?v=Sr7H6mbZ5ic&ab_channel=YoungLordEisen-Topic" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Latest Music Video</span></a>
+        <a href="https://soundcloud.com/yxng-lxrd-set/young-lord-eisen-evilniggaholiday-ep-2018" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Listen to Latest Song</span></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -95,8 +95,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bx-spa"></i></div>
-              <h4 class="title"><a href="">The Tales of Eisen</a></h4>
-              <p class="description">Currently towards the end of Tales Vol.1, the Young Lord looks to push himself to newer heights within retirement...</p>
+              <h4 class="title"><a href="https://soundcloud.com/yxng-lxrd-set">NEW MUSIC AVAILABLE ON SOUNDCLOUD!</a></h4>
+              <p class="description">Young Lord Eisen and the Skybox gang have been cooking up some new tunes click above to check it out! </p>
             </div>
           </div>
 
@@ -104,7 +104,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-dna"></i></div>
               <h4 class="title"><a href="">Children Of The Sky</a></h4>
-              <p class="description">Working in coordination with longtime collaborator <strong>BlackPolaBare</strong> of Skybox Recordings,The Herald of the Haus intends to continue his revolutionary music journey through a new collection of songs and projects with the evolving collective expected to be released starting late 2021-mid 2022...</p>
+              <p class="description">Heralded the Golden Child of <strong>Skybox Recordings</strong>, Young Lord Eisen, BlackPolaBare, Mansa Sage, DJ Zebo 305 and others are preparing to introduce the world to the premier entertainment monolith!</p>
             </div>
           </div>
 
