--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Young Lord Eisen</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Official Website for Young Lord Eisen" name="description">
+  <meta content="Eisen, Young Lord, music, rap, Hip-Hop, Skybox" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
