--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
 
     <link rel="stylesheet" href="assets/css/lightbox.css">
 <!--
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EHGT70NT9M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-EHGT70NT9M');
+</script>
 
 
 -->
